--- a/notebooks/AGPSWITRS Part3 - Layout Processing.ipynb
+++ b/notebooks/AGPSWITRS Part3 - Layout Processing.ipynb
@@ -12145,7 +12145,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "agpenv",
+   "display_name": "drkPy",
    "language": "python",
    "name": "python3"
   },
@@ -12159,7 +12159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
