Update kernel specifications and execution counts in notebooks
- Changed kernel display name from "agpenv" to "ArcGISPro" in both notebooks.
- Updated execution counts for various code cells in "AGPSWITRS Part2 - Map Processing.ipynb".
- Added output streams for user input prompts in the second notebook.
- Adjusted project folder paths to use lowercase directory names for consistency.
- Modified the end date in the datetime object to December 31, 2024, in the second notebook.

--- a/notebooks/AGPSWITRS Part2 - Map Processing.ipynb
+++ b/notebooks/AGPSWITRS Part2 - Map Processing.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,9 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the running environment (1=VSCode, 2=ArcGIS Pro):  2\n"
+     ]
+    }
+   ],
    "source": [
     "runEnv = input(\"Enter the running environment (1=VSCode, 2=ArcGIS Pro): \")"
    ]
@@ -109,15 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Environment variable for OneDrive path\n",
-    "onedriveFolder = os.getenv(\"OneDriveCommercial\")\n",
+    "# Parent project Directory\n",
+    "if runEnv == \"1\":\n",
+    "    projectFolder = os.path.dirname(os.getcwd())    \n",
+    "elif runEnv == \"2\":\n",
+    "    projectFolder = os.path.dirname(os.path.dirname(arcpy.env.workspace))\n",
     "\n",
-    "# OCSWITRS project path\n",
-    "projectFolder = os.path.join(onedriveFolder, \"Documents\", \"OCSWITRS\")"
+    "# Current notebook directory\n",
+    "notebookDir = os.path.join(projectFolder, \"notebooks\")"
    ]
   },
   {
@@ -136,9 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running in ArcGIS Pro (project = CURRENT)\n"
+     ]
+    }
+   ],
    "source": [
     "# OCSWITRS project AGP path\n",
     "agpFolder = os.path.join(projectFolder, \"AGPSWITRS\")\n",
@@ -180,26 +199,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Raw data folder path\n",
-    "rawDataFolder = os.path.join(projectFolder, \"Data\", \"Raw\")\n",
+    "rawDataFolder = os.path.join(projectFolder, \"data\", \"raw\")\n",
     "\n",
     "# Maps folder path\n",
-    "mapsFolder = os.path.join(projectFolder, \"Maps\")\n",
+    "mapsFolder = os.path.join(projectFolder, \"maps\")\n",
     "\n",
     "# Layers folder path\n",
-    "layersFolder = os.path.join(projectFolder, \"Layers\")\n",
-    "layersTemplates = os.path.join(layersFolder, \"Templates\")\n",
+    "layersFolder = os.path.join(projectFolder, \"layers\")\n",
+    "layersTemplates = os.path.join(layersFolder, \"templates\")\n",
     "\n",
     "# Layouts folder path\n",
-    "layoutsFolder = os.path.join(projectFolder, \"Layouts\")\n",
+    "layoutsFolder = os.path.join(projectFolder, \"layouts\")\n",
     "\n",
     "# Notebooks folder path\n",
-    "notebooksFolder = os.path.join(projectFolder, \"Notebooks\")\n",
-    "codebookPath = os.path.join(projectFolder, \"Data\", \"codebook\", \"cb.json\")"
+    "notebooksFolder = os.path.join(projectFolder, \"notebooks\")\n",
+    "codebookPath = os.path.join(projectFolder, \"scripts\", \"codebook\", \"cb.json\")"
    ]
   },
   {
@@ -211,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +271,7 @@
     "dateStart = datetime(2012, 1, 1, 0, 0, 0)\n",
     "\n",
     "# Add the end date of the raw data to a new python datetime object\n",
-    "dateEnd = datetime(2024, 9, 30, 23, 59, 59)\n",
+    "dateEnd = datetime(2024, 12, 31, 23, 59, 59)\n",
     "\n",
     "# Define time and date variables\n",
     "timeZone = pytz.timezone(\"US/Pacific\")\n",
@@ -270,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9881,15 +9900,9 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.11.10"
   }
  },
