Completed part3 or R script for Update R code for new geodatabase structure #31

--- a/analysis/graphics/Tbl2-Collision Severity Rank Stats.tex
+++ b/analysis/graphics/Tbl2-Collision Severity Rank Stats.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 4.4.3 by xtable 1.8-4 package
-% Sun May  4 13:29:31 2025
+% Tue May  6 14:11:56 2025
 \begin{table}[h]
 \centering
 \caption{Ranked collision severity ordinal classification, related parameters, and OCSWITRS dataset counts} 
@@ -9,7 +9,7 @@
   \multicolumn{2}{c}{Rank and Level} & Fatalities & Injuries & Type & Crashes & Parties & Victims \\ 
  \midrule
 0 & None or Minor Injuries & None & None & Minor & 159,056 & 345,035 & 277,248 \\ 
-  1 & Single Injury (Severe) & None & Single & Severe & 8,242 & 16,237 & 13,522 \\ 
+  1 & Single Injury (Severe) & None & Single &  & 8,242 & 16,237 & 13,522 \\ 
   2 & Multiple Injuries (Severe) & None & Multiple & Severe & 599 & 1,419 & 1,893 \\ 
   3 & Single Fatality, No Injuries (Fatal) & Single & None & Fatal & 1,923 & 3,827 & 2,919 \\ 
   4 & Single Fatality, Single Injury (Fatal) & Single & Single & Fatal & 204 & 466 & 574 \\ 
