--- a/analysis/graphics/Tbl5-Collision Incidents by Year.tex
+++ b/analysis/graphics/Tbl5-Collision Incidents by Year.tex
@@ -34,3 +34,7 @@ footnotes \\
   \midrule
 \footnotetext[1]{Covers time series from 01/01/2012 through 12/31/2024} \\ 
    \bottomrule
+footnotes \\ 
+  \midrule
+\footnotetext[1]{Covers time series from 01/01/2012 through 12/31/2024} \\ 
+   \bottomrule
