--- a/notebooks/AGPSWITRS Part3 - Layout Processing.ipynb
+++ b/notebooks/AGPSWITRS Part3 - Layout Processing.ipynb
@@ -7,7 +7,7 @@
     "<div style = \"background-color:indigo\"><center>\n",
     "<h1 style=\"font-size: 50px; font-weight: bold; color:goldenrod; border-top: 3px solid goldenrod; padding-top: 10px\">OC SWITRS GIS Data Processing</h1>\n",
     "<div style=\"font-size: 35px; font-weight: bold; color: goldenrod\"> Part 3 - Map Layout Processing</div>\n",
-    "<div style=\"font-size: 30px; font-weight: bold; color: goldenrod; border-bottom: 3px solid goldenrod; padding-bottom: 20px\">v.1, January 2025</div>\n",
+    "<div style=\"font-size: 30px; font-weight: bold; color: goldenrod; border-bottom: 3px solid goldenrod; padding-bottom: 20px\">v.2.1, May 2025</div>\n",
     "</center></div>"
    ]
   },
@@ -12139,7 +12139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "agpenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -12153,7 +12153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
