Add initial script for OCSWITRS R Data Processing project
- Created part1Features.py with project metadata and library imports
- Established preliminary structure for future development
- Included necessary libraries such as arcpy and arcgis for geospatial processing

--- a/notebooks/agpswitrsPart1Features.ipynb
+++ b/notebooks/agpswitrsPart1Features.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define and maitnain project, workspace, ArcGIS, and data-related variables"
+    "Define and maintain project, workspace, ArcGIS, and data-related variables"
    ]
   },
   {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -159,6 +159,7 @@
     "gdbName = \"AGPSWITRS.gdb\"\n",
     "gdbPath = os.path.join(agpFolder, gdbName)\n",
     "\n",
+    "aprx = arcpy.mp.ArcGISProject(aprxPath)\n",
     "# ArcGIS pro project\n",
     "if runEnv == \"1\":  # VSCode\n",
     "    print(\"Running in VSCode (project = aprxPath)\")\n",
